<resources>
    <string name="app_name">DinnerNightV2</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_groceries">Groceries</string>
    <string name="title_alarms">Alarms</string>
    <string name="title_settings">Settings</string>
    <string name="settings_dark">Dark Mode</string>
    <string name="theme_key">theme key</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm_on">ON</string>
    <string name="alarm_off">OFF</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>