<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_recipes">

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.dinnernightv2.ui.recipes.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" >
        <action
            android:id="@+id/action_navigation_recipes_to_cajunFragment"
            app:destination="@id/cajunFragment" />
        <action
            android:id="@+id/action_navigation_recipes_to_navigation_calendar"
            app:destination="@id/navigation_calendar" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.dinnernightv2.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_groceries"
        android:name="com.example.dinnernightv2.ui.groceries.GroceriesFragment"
        android:label="@string/title_groceries"
        tools:layout="@layout/fragment_groceries" />

    <fragment
        android:id="@+id/navigation_alarms"
        android:name="com.example.dinnernightv2.ui.alarms.AlarmsFragment"
        android:label="@string/title_alarms"
        tools:layout="@layout/fragment_alarms" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.dinnernightv2.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/cajunFragment"
        android:name="com.example.dinnernightv2.ui.recipes.items.CajunFragment"
        android:label="fragment_cajun"
        tools:layout="@layout/fragment_cajun" />

</navigation>